[package]
name = "rcon_cli"
version = "0.2.0"
authors = ["Kiiya <snoewflaek@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
opt-level = 3 # AFAIK default is 2.
panic = 'abort'     # Abort on panic. Supposedly helps reduzing binary size.

[dependencies]
battlefield_rcon = { git = "https://github.com/Kiiyya/BattleFox" }
# battlefield_rcon = { path = "./../BattleFox/battlefield_rcon" }

tokio = { version = "1.2.0", features = ["rt-multi-thread", "io-util"]}
tokio-stream = "0.1"
ascii = "1.0.0"

dotenv = "0.15.0"
crossterm = "0.19.0"
clap = "2.33.3"

chrono = { version = "0.4", features = [ "serde" ]}
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
ron = "0.6"

git-version = "0.3"

# Stuff for logging
log = "0.4"
flexi_logger = { version = "0.17", features = ["colors"] }
